# podtext

./: .gitignore  LICENSE  Makefile  README.md  prd.md  pyproject.toml  requirements.md  stuff.md  tasks.md
.claude/: settings.local.json
.kiro/specs/: tasks.md
.kiro/specs/batch-transcribe/: design.md  requirements.md  tasks.md
.kiro/specs/enhanced-metadata/: design.md  requirements.md  tasks.md
.kiro/specs/include-shownotes/: design.md  requirements.md  tasks.md
.kiro/specs/podtext/: design.md  tasks.md
.kiro/specs/semantic-file-naming/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.podtext/: ANALYSIS.md  config  config.example  config.toml  prompts.md
.podtext/output/: 20251217__840__Bill_Gurley___Investing_in_The_AI_Era__10_Days_in_China__and_Important_Life_Lessons_from_Bob_D.md  20260121__849__Dr__Michael_Levin___Reprogramming_Bioelectricity__Updating__Software__for_Anti-Aging__Treating.md  _840_ Bill Gurley _ Investing in The AI Era_ 10 Da.md
podtext/: __init__.py  __main__.py
podtext/cli/: __init__.py  episodes.py  main.py  search.py  transcribe.py
podtext/clients/: claude.py  itunes.py
podtext/config/: __init__.py  defaults.py  manager.py
podtext/models/: __init__.py  podcast.py  transcript.py
podtext/output/: __init__.py  markdown.py
podtext/services/: __init__.py  analyzer.py  podcast.py  transcriber.py
prompts/: analysis.md
specs/: tasks.md
specs/claude/: design.md  tasks.md
specs/cursor/: design.md  requirements.md
specs/kiro/: design.md  requirements.md  tasks.md
specs/kiro-opus/: requirements.md  tasks.md
src/podtext/: __init__.py  __main__.py  claude.py  cli.py  config.py  downloader.py  itunes.py  models.py  output.py  pipeline.py  processor.py  prompts.py  rss.py  transcriber.py
src/podtext/cli/: __init__.py  main.py  output.py
src/podtext/core/: __init__.py  config.py  errors.py  models.py  output.py  pipeline.py  processor.py  prompts.py
src/podtext/services/: __init__.py  analysis.py  claude.py  discovery.py  download.py  downloader.py  itunes.py  output.py  rss.py  transcribe.py  transcriber.py
src/podtext/utils/: __init__.py  audio.py  text.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_batch.py  test_claude.py  test_claude_api_error_handling.py  test_claude_properties.py  test_cli.py  test_cli_properties.py  test_config.py  test_config_properties.py  test_discovery.py  test_discovery_properties.py  test_download.py  test_downloader.py  test_enhanced_metadata_properties.py  test_integration.py  test_itunes.py  test_markdown.py  test_media.py  test_media_transcription_properties.py  test_models.py  test_output.py  test_output_properties.py  test_pipeline.py  test_podcast_service.py  test_processor.py  test_processor_properties.py  test_prompts.py  test_rss.py  test_shownotes_properties.py  test_transcriber.py
transcripts/: the-tim-ferriss-show-#849-dr.-michael-levin-—-r.md
transcripts/The Tim Ferriss Show/: #849 Dr. Michael Levin — Reprogramming Bioelectricity, Updating Software for Anti-Aging, Treating.md
