[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podtext"
version = "0.1.0"
description = "CLI tool for podcast transcription and analysis using MLX-Whisper and Claude AI"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Podtext Team"}
]
keywords = ["podcast", "transcription", "whisper", "mlx", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "mlx-whisper>=0.4.0",
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "tomli>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.100.0",
    "respx>=0.21.0",
]

[project.scripts]
podtext = "podtext.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/podtext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/podtext"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
