[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podtext"
version = "0.1.0"
description = "CLI tool for podcast transcription and analysis using MLX-Whisper and Claude AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Podtext Team" }
]
keywords = ["podcast", "transcription", "whisper", "mlx", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "mlx-whisper>=0.4.0",
    "anthropic>=0.40.0",
    "click>=8.1.7",
    "tomli>=2.0.2",
    "tomli-w>=1.0.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.115.0",
    "respx>=0.21.1",
    "ruff>=0.7.0",
]

[project.scripts]
podtext = "podtext.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/podtext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
